fixed GetTariffInfoForEmployeeDtoMapper null pointer exception.